--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url("https://hdwallsource.com/img/2014/7/beautiful-beach-background-17581-18141-hd-wallpapers.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
 }
 
 
@@ -9,23 +10,23 @@ body {
     height: 210px;
     width: auto;
     position: fixed;
-    bottom: 120px;
+    bottom: 10px;
     z-index: 2;
 }
 
 #table {
     height: 20px;
-    width: 20%;
+    width: 50%;
     bottom: 60px;
-    position:fixed;
-    padding: 15%;
+    position: relative;
+    right: 30%;
 }
 
 #gummies {
     position: absolute;
     left: 300px;
     width: 140px;
-    bottom:400px;
+    bottom: 300px;
     z-index: 2;
 }
 
@@ -33,7 +34,7 @@ body {
     position: absolute;
     left: 300px;
     width: 140px;
-    bottom:400px;
+    bottom: 300px;
     z-index: 2;
     background-color: red;
     border: 4px solid;
@@ -44,7 +45,7 @@ body {
     width: 140px;
     height: 140px;
     left: 500px;
-    bottom: 400px;
+    bottom: 300px;
     z-index: 2;
 }
 
@@ -53,7 +54,7 @@ body {
     height:140px;
     position: absolute;
     left: 500px;
-    bottom: 400px;
+    bottom: 300px;
     z-index: 2;
     background-color: blue;
     border: 4px solid;
@@ -61,16 +62,18 @@ body {
 
 #chocolate {
     width: 140px;
+    height: 140px;
     position: absolute;
-    bottom: 400px;
+    bottom: 300px;
     left: 700px;
     z-index: 2;
 }
 
 #chocolate2 {
     width: 140px;
+    height: 140px;
     position: absolute;
-    bottom: 400px;
+    bottom: 300px;
     left: 700px;
     z-index: 2;
     background-color: green;
@@ -78,18 +81,20 @@ body {
 }
 
 #mm {
-    position: fixed;
-    left:900px;
+    position: absolute;
+    left: 900px;
     width: 140px;
-    bottom: 400px;
+    height: 140px;
+    bottom: 300px;
     z-index: 2;
 }
 
 #mm2 {
-    position: fixed;
+    position: absolute;
     left:900px;
     width:140px;
-    bottom: 400px;
+    height: 140px;
+    bottom: 300px;
     z-index: 2;
     background-color: yellow;
     border: 4px solid;
@@ -116,24 +121,80 @@ position:relative;
 #text1 {
     z-index: 1;
     font-size: 40px;
-    color: white;
     text-align: center;
     background: transparent;
     box-sizing: border-box;
     position:fixed;
     margin-left:40%;
-    /*left: 550px;*/
     font-family: "Comic Sans";
     border: 10px;
     border-style: ridge;
     border-color: Silver;
     border-radius: 30px;
+    color:#313131;
+      font-size: 40px;
+      font-weight: bold;
+      position: absolute;
+      -webkit-animation:colorchange 20s infinite alternate;
 }
 
-#img {
+
+@-webkit-keyframes colorchange {
+      0% {
+        
+        color: blue;
+      }
+      
+      10% {
+        
+        color: #8e44ad;
+      }
+      
+      20% {
+        
+        color: #1abc9c;
+      }
+      
+      30% {
+        
+        color: #d35400;
+      }
+      
+      40% {
+        
+        color: blue;
+      }
+      
+      50% {
+        
+        color: #34495e;
+      }
+      
+      60% {
+        
+        color: blue;
+      }
+      
+      70% {
+        
+        color: #2980b9;
+      }
+      80% {
+     
+        color: #f1c40f;
+      }
+      
+      90% {
+     
+        color: #2980b9;
+      }
+      
+      100% {
+        
+        color: pink;
+      }
+    }
     
-}
-
 #board {
     height: 300px;
     width: 100px;
